# Unity_PickAndPlace_Integration_SmolVLA

./: .gitignore  README.md  manual_ros_setup_guide.md  smolvla_integration_summary.md
tutorials/pick_and_place/PickAndPlaceProject/Assets/: msgbrowser_settings.asset
tutorials/pick_and_place/PickAndPlaceProject/Assets/Resources/: ROSConnectionPrefab.prefab
tutorials/pick_and_place/PickAndPlaceProject/Assets/Scenes/: New Scene.unity
tutorials/pick_and_place/PickAndPlaceProject/Assets/Scripts/: RosActionSubscriber.cs  RosCommandPublisher.cs  RosImagePublisher.cs  SceneResetter.cs
tutorials/pick_and_place/ROS/src/smolvla_ros/: CMakeLists.txt  package.xml  setup.py
tutorials/pick_and_place/ROS/src/smolvla_ros/launch/: smolvla_launch.launch
tutorials/pick_and_place/ROS/src/smolvla_ros/msg/: SmolVLACommandImage.msg
tutorials/pick_and_place/ROS/src/smolvla_ros/scripts/: smolvla_node.py
tutorials/pick_and_place/docker/: Dockerfile  start_roscore.sh  start_subscriber.sh
